<resources>
    <string name="app_name">Planets</string>
    <string name="search_title">Search</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Celestial Bodies:</string>
    <string-array name="mars_moons">
        <item>Phobos</item>
        <item>Deimos</item>
    </string-array>
    <string-array name="fragments">

        
        <item>Planetarium</item>
        
    </string-array>
    <string-array name="settings">
        <item>Settings</item>
    </string-array>
    <string-array name="themes">
        <item name="1">Red</item>
        <item name="2">Orange</item>
        <item name="3">Blue</item>
        <item name="4">Green</item>
        <item name="5">Purple</item>
        <item name="6">Dark</item>
    </string-array>
    <string-array name="themesEntries">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
        <item name="6">6</item>
    </string-array>
    <string-array name="donations">
        <item name="1">$1</item>
        <item name="2">$5</item>
        <item name="3">$10</item>
        <item name="4">$25</item>
        <item name="5">$50</item>
    </string-array>
    <string-array name="donationEntries">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
    </string-array>
    <string name="pref_cate_title_1">Design</string>
    <string name="pref_5">Theme</string>
    <string name="pref_cate_title_2">Paid</string>
    <string name="pref_3">Donate</string>
    <string name="sun_image">Picture of Sun</string>
    <string name="mercury_image">Picture of Mercury</string>
    <string name="venus_image">Picture of Venus</string>
    <string name="earth_image">Picture of Earth</string>
    <string name="mars_image">Picture of Mars</string>
    <string name="jupiter_image">Picture of Jupiter</string>
    <string name="saturn_image">Picture of Saturn</string>
    <string name="uranus_image">Picture of Uranus</string>
    <string name="neptune_image">Picture of Uranus</string>
    <string name="earth_satellite">Satellite (1)</string>
    <string name="moon_title">Moon</string>
    <string name="moon_image">Picture of the Moon</string>
    <string name="moon_sub_title_1">Data</string>
    <string name="moon_description">Circumference at Equator: 10,917.0 km\nDiameter: 3,475 km\nMass: 73,476,730,924,573,500 million kg (0.0123 x Earth)\nAverage Distance from Earth: 384,400 km\nLength of Orbit: 27.3 Earth days\nSurface Temperature: -233 to 123 °C</string>
    <string name="moon_sub_title_2">Facts</string>
    <string name="moon_description_2">The Moon (or Luna) is the Earth’s only natural satellite and was formed 4.6 billion years ago around some 30–50 million years after the formation of the solar system. The Moon is in synchronous rotation with Earth meaning the same side is always facing the Earth. The first unmanned mission to the Moon was in 1959 by the Soviet Lunar Program with the first manned landing being Apollo 11 in 1969.</string>
    <string name="moon_button">Satellite (1)</string>
    <string name="mars_satellite">Satellite (2)</string>
    <string name="phobos_title">Phobos</string>
    <string name="phobos_image">Picture of Phobos</string>
    <string name="phobos_sub_title_1">Data</string>
    <string name="phobos_description">Dimensions: 27 × 22 × 18 km\nMean radius: 11.2667 km (1.76941 mEarths)\nMass: 1.0659×1016 kg (17.8477 nEarths)\nMean density: 1.876 g/cm cubed\nEquatorial Surface Gravity: 0.0057 m/s squared (581.4 µg)\nEscape Velocity: 11.39 m/s (41 km/h)\nTemperature ≈ 233 K\nApparent magnitude: 11.3</string>
    <string name="phobos_sub_title_2">Facts</string>
    <string name="phobos_description_2">In the early 17th century, German astronomer Johannes Kepler proposed that Mars might host two moons, given that it lay between the Earth and Jupiter, which were known to have one and four satellites. No evidence of such moons could be found. Although most people thought that Mars had no moons, American astronomer Asaph Hall performed a methodical study from the U.S. Naval Observatory in Washington, D.C., searching closer to the planet than previous surveys.
After searching without success, a frustrated Hall was about to give up but his wife, Angelina, urged him to continue. The next night, August 12, 1877, he discovered the moon that would later be known as Deimos. Six days later, he found Phobos as well. The two moons lay so close to their primary that they were hidden by the planet\'s glare. Asteroid-sized, they are also two of the smallest moons in the solar system, with the larger Phobos 7.24 times as massive as its companion, Deimos.</string>
    <string name="deimos_satellite">Satellite (2)</string>
    <string name="deimos_title">Deimos</string>
    <string name="deimos_image">Picture of Deimos</string>
    <string name="deimos_sub_title_1">Data</string>
    <string name="deimos_description">Dimensions: 7.8 × 6.0 × 5.1 km\nMean Radius: 6.2  ±  0.18 km  (0.97316 mEarths)\nMass: 1.4762×1015 kg (24.7179 nEarths)\nMean Density: 1.471±0.166 g/cm cubed\nEquatorial Surface Gravity: 0.003 m/s squared (306 µg)\nEscape Velocity: 5.556 m/s (20 km/h)\nTemperature ≈ 233 K\nApparent Magnitude: 12.45 ± 0.05 </string>
    <string name="deimos_sub_title_2">Facts</string>
    <string name="deimos_description_2">On August 12, 1877, the focused search for Martian moons by American astronomer Asaph Hall resulted in the discovery of Deimos. Six days later, he identified the second Martian moon, Phobos.\nThe existence of the moons had been suggested years before, when Johannes Kepler proposed that since Earth hosted one moon and Jupiter four (as only the Galilean moons were known at the time), Mars might have two moons in orbit around it. However, no signs of such moons existed until Hall undertook his careful search.\nUsing a 26-inch refractor at the U.S. Naval Observatory in Washington, D.C., Hall made a methodical study of the region around the red planet. Peering closer to Mars than previous astronomers, he found Deimos circling only 14,576 miles (23,458 kilometers) from the center of the planet, traveling around its equator. Phobos orbited even closer in. Their close proximity and small size had kept them hidden in the glare from the planet.\nLike many objects in the solar system, the Martian moons take their names from Greek mythology. In Homer\'s ancient poem, \"The Iliad,\" Deimos (Flight) and Phobos (Fear) were the twin sons of Mars (Ares to the Greeks), and accompany him into battle.</string>
    <string name="button_source">Source</string>
    <string name="home_title">Home</string>
    <string name="home_info_1">Welcome to Planets!</string>
    <string name="sun_title">Sun</string>
    <string name="sun_sub_title_1">Data</string>
    <string name="sun_description">Age: 4.6 Billion Years\nType: Yellow Dwarf (G2V)\nDiameter: 1,392,684 km\nCircumference at Equator: 4,370,005.6 km\nMass: 1,989,100,000,000,000,000,000 billion kg (333,060 x Earth)\nSurface Temperature: 5500 °C</string>
    <string name="sun_sub_title_2">Facts</string>
    <string name="pluto_title">Pluto</string>
    <string name="pluto_image">Image of Pluto</string>
    <string name="pluto_description">Gravity: 0.658 m/s squared\nDiscovered: February 18th, 1930\nDensity: 2.03 g/cm\ cubed\nCircumference: 4,494 miles (7,232 km)</string>
    <string name="pluto_description_2">Pluto is the only dwarf planet to once have been considered a major planet. Once thought of as the ninth planet and the one most distant from the sun, Pluto is now seen as one of the largest known members of the Kuiper Belt, a shadowy disk-like zone beyond the orbit of Neptune populated by a trillion or more comets. Pluto was reclassified as a dwarf planet in 2006, a change widely thought of as a demotion that has attracted controversy and debate.\n\nAmerican astronomer Percival Lowell first caught hints of Pluto\'s existence in 1905 from odd deviations he observed in the orbits of Neptune and Uranus, suggesting that another world\'s gravity was tugging at them from beyond. He predicted its location in 1915, but died without finding it. Its discovery came in 1930 from Clyde Tombaugh at the Lowell Observatory, based on predictions from Lowell and other astronomers.\n\nPluto is the only world named by an 11-year-old girl, Venetia Burney of Oxford, England, who suggested to her grandfather that it get its name from the Roman god of the underworld. Her grandfather then passed the name on to Lowell Observatory. The name also honors Percival Lowell, whose initials are the first two letters of Pluto.</string>
    <string name="h_comet_image">Image of Halley\'s Comet</string>
    <string name="h_comet_description">Orbital Period: 75 Years\nDiscovered: 1705\nLast Perihelion: February 9th, 1986\nPredicted Next Perihelion: July 28th, 2061</string>
    <string name="h_comet_description_2">Halley\'s Comet is arguably the most famous comet. It is a \"periodic\" comet and returns to Earth\'s vicinity about every 75 years, making it possible for a human to see it twice in his or her lifetime. The last time it was here was in 1986, and it is projected to return in 2061.\nThe comet is named after English astronomer Edmond Halley, who examined reports of a comet approaching Earth in 1531, 1607 and 1682. He concluded that these three comets were actually the same comet returning over and over again, and predicted the comet would come again in 1758.\nHalley didn\'t live to see the comet\'s return, but his discovery led to the comet being named after him. (The traditional pronunciation of the name usually rhymes with valley.) Halley\'s calculations showed that at least some comets orbit the sun.\nFurther, the first Halley\'s Comet of the space age – in 1986 – saw several spacecraft approach its vicinity to sample its composition. High-powered telescopes also observed the telescope as it swung by Earth.</string>
</resources>