<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pref_screen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="8dp"
    android:fitsSystemWindows="true"
    android:clipToPadding="false">

    <PreferenceCategory android:title="@string/pref_cate_title_1">

        <ListPreference
            android:defaultValue="3"
            android:entries="@array/themes"
            android:entryValues="@array/themesEntries"
            android:key="prefSetTheme"
            android:summary="Tap here to change the design of the app."
            android:title="@string/pref_5" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cate_title_2">

        <Preference
            android:summary="Tap here to donate to my cause. Funds help me build better apps."
            android:title="@string/pref_3">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=com.andrewq.donate" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>