<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/phobosscrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:fitsSystemWindows="true"
    android:clipToPadding="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/phobos_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Phobos"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/phobos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phobos_title"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/phobos_image"
            android:src="@drawable/phobos" />

        <TextView
            android:id="@+id/phobos_sub_title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phobos"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="4dp"
            android:text="@string/phobos_sub_title_1"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/phobos_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phobos_sub_title_1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/phobos_description"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/phobos_sub_title_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phobos_description"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/phobos_sub_title_2"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/phobos_description_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phobos_sub_title_2"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/phobos_description_2"
            android:textSize="16sp" />
    </RelativeLayout>

</ScrollView>