<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.andrewq.planets.FragmentHComet" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent" >

            <TextView
                android:id="@+id/h_comet_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Halley's Comet"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/h_comet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/h_comet_title"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/h_comet_image"
                android:src="@drawable/haleys_comet" />

            <TextView
                android:id="@+id/image_caption_h_comet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/h_comet"
                android:layout_centerHorizontal="true"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text=""
                android:textSize="12sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/h_comet_sub_title_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_caption_h_comet"
                android:layout_centerHorizontal="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/sun_sub_title_1"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/h_comet_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/h_comet_sub_title_1"
                android:layout_centerHorizontal="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/h_comet_description"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/h_comet_sub_title_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/h_comet_description"
                android:layout_centerHorizontal="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/sun_sub_title_2"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/h_comet_description_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/h_comet_sub_title_2"
                android:layout_centerHorizontal="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/h_comet_description_2"
                android:textSize="16sp" />
        </RelativeLayout>
    </FrameLayout>

</ScrollView>